doc (更新): jdk自带工具笔记.md